--- a/SLBr/SLBr.csproj
+++ b/SLBr/SLBr.csproj
@@ -12,8 +12,8 @@
     <SignAssembly>False</SignAssembly>
     <ApplicationIcon>Resources\SLBr.ico</ApplicationIcon>
     <Copyright>Copyright (c) SLT Softwares. All rights reserved.</Copyright>
-    <AssemblyVersion>2025.6.15.1</AssemblyVersion>
-    <FileVersion>2025.6.15.1</FileVersion>
+    <AssemblyVersion>2025.7.16.0</AssemblyVersion>
+    <FileVersion>2025.7.16.0</FileVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
@@ -51,7 +51,6 @@
 
   <ItemGroup>
     <PackageReference Include="CefSharp.Wpf.HwndHost" Version="137.0.100" />
-    <PackageReference Include="System.Drawing.Common" Version="9.0.5" />
   </ItemGroup>
 
   <ItemGroup>
@@ -85,6 +84,9 @@
     <None Update="Resources\History.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\Private.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\License.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -115,6 +117,9 @@
     <None Update="Resources\SLBr.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\SLBr.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\style.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -130,15 +135,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="chromiumembeddedframework.runtime.win-arm64" Version="137.0.10" />
+    <PackageReference Update="chromiumembeddedframework.runtime.win-arm64" Version="138.0.17" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="chromiumembeddedframework.runtime.win-x64" Version="137.0.10" />
+    <PackageReference Update="chromiumembeddedframework.runtime.win-x64" Version="138.0.17" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="chromiumembeddedframework.runtime.win-x86" Version="137.0.10" />
+    <PackageReference Update="chromiumembeddedframework.runtime.win-x86" Version="138.0.17" />
   </ItemGroup>
 
 </Project>
