--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -8,7 +8,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Only open an issue if you have a **bug** to report.
+        Only open an issue if you have a project-related **bug** to report.
         For project-related questions & discussions, use [Discussions](https://github.com/SLT-World/SLBr/discussions).
 
         Before proceeding, ensure that:
@@ -18,7 +18,7 @@ body:
   - type: checkboxes
     attributes:
       label: Existing Issue Check
-      description: Confirm that no existing issue already reports this bug.
+      description: Confirm that no similar bug reports have been submitted.
       options:
       - label: I have searched both open/closed issues and found no duplicate.
         required: true
@@ -27,7 +27,7 @@ body:
     attributes:
       label: SLBr Version
       description: Specify the exact version in which the problem occurs. Only report issues reproducible on the latest version.
-      placeholder: ----.--.--.--
+      placeholder: 0000.00.00.00
     validations:
       required: true
   - type: dropdown
@@ -36,8 +36,8 @@ body:
       label: Operating System
       multiple: false
       options:
-        - Windows 10
         - Windows 11
+        - Windows 10
     validations:
       required: true
   - type: dropdown
@@ -93,7 +93,7 @@ body:
     attributes:
       label: Additional Information
       description: |
-        Mention any relevant context, such as third-party components or unusual configurations.
+        Include any relevant context.
       placeholder: Additional information
     validations:
       required: false
