--- a/SLBr/SLBr.csproj
+++ b/SLBr/SLBr.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Benchmark.cs" />
     <Compile Remove="Controls\ReportWindow.xaml.cs" />
     <Compile Remove="WebViewDemo.xaml.cs" />
   </ItemGroup>
@@ -86,6 +87,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Benchmark.cs" />
     <None Include="Controls\ReportWindow.xaml" />
     <None Include="Controls\ReportWindow.xaml.cs" />
   </ItemGroup>
